crates/testing/compiletest-integration/tests/run-pass/basic-if-else.rs
fn main() -> i64 {
    let x = 42;
    if x > 40 {
        100
    } else {
        0
    }
}
